[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-scavio"
version = "0.1.0"
description = "LangChain integration for Scavio Search API"
authors = ["Scavio <dev@scavio.dev>"]
readme = "README.md"
repository = "https://github.com/scavio/langchain-scavio"
license = "MIT"
include = ["langchain_scavio/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain-core = ">=0.3.0,<2.0.0"
requests = "^2.32"
aiohttp = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5"
mypy = "^1.15"
types-requests = "^2.31"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
langchain-tests = ">=0.3.21"
responses = "^0.25"

[tool.mypy]
disallow_untyped_defs = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: tests that hit the real API"]
