[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-scavio"
version = "2.3"
description = "LangChain integration for Scavio Search API -- real-time web search with knowledge graphs, multi-platform support"
authors = ["Scavio"]
readme = "README.md"
homepage = "https://scavio.dev"
repository = "https://github.com/scavio-ai/langchain-scavio"
documentation = "https://scavio.dev/docs/langchain"
license = "MIT"
keywords = ["langchain", "search", "ai", "agents", "web-search", "knowledge-graph", "tavily-alternative", "langgraph", "serp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Framework :: Pydantic :: 2",
    "Typing :: Typed",
]
include = ["langchain_scavio/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain-core = ">=0.3.0,<2.0.0"
requests = "^2.32"
aiohttp = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5"
mypy = "^1.15"
types-requests = "^2.31"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
langchain-tests = ">=0.3.21"
responses = "^0.25"

[tool.mypy]
disallow_untyped_defs = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: tests that hit the real API"]
